--- a/src/pages/management/locations/[location_id]/edit.astro
+++ b/src/pages/management/locations/[location_id]/edit.astro
@@ -38,7 +38,7 @@ if (email !== "admin@coffee.place") {
 
 const location = {
     uuid: "u3z",
-    neighborhood: "Kozari bok",
+    neighborhood: "Vrbik",
     street_address: "Unska 3",
     city: "Zagreb",
 };
