--- a/src/pages/management/locations/[location_id]/edit.astro
+++ b/src/pages/management/locations/[location_id]/edit.astro
@@ -36,48 +36,64 @@ if (email !== "admin@coffee.place") {
     return redirect("/");
 }
 
-const location = {
-    uuid: "u3z",
-    neighborhood: "Vrbik",
-    street_address: "Unska 3",
-    city: "Zagreb",
-};
+// const location = {
+//     uuid: "u3z",
+//     neighborhood: "Vrbik",
+//     street_address: "Unska 3",
+//     city: "Zagreb",
+// };
 
-const tables = [
-    {
-        id: 1,
-        location_uuid: "u3z",
-        taken_seats: 2,
-        total_seats: 4,
-        reserved: false,
-        x: 150,
-        y: 50,
-    },
-    {
-        id: 2,
-        taken_seats: 0,
-        total_seats: 4,
-        reserved: false,
-        x: 0,
-        y: 200,
-    },
-    {
-        id: 3,
-        taken_seats: 5,
-        total_seats: 6,
-        reserved: false,
-        x: 270,
-        y: 0,
-    },
-    {
-        id: 4,
-        taken_seats: 0,
-        total_seats: 6,
-        reserved: true,
-        x: 49,
-        y: 0,
-    },
-];
+// const tables = [
+//     {
+//         id: 1,
+//         location_uuid: "u3z",
+//         taken_seats: 2,
+//         total_seats: 4,
+//         reserved: false,
+//         x: 150,
+//         y: 50,
+//     },
+//     {
+//         id: 2,
+//         taken_seats: 0,
+//         total_seats: 4,
+//         reserved: false,
+//         x: 0,
+//         y: 200,
+//     },
+//     {
+//         id: 3,
+//         taken_seats: 5,
+//         total_seats: 6,
+//         reserved: false,
+//         x: 270,
+//         y: 0,
+//     },
+//     {
+//         id: 4,
+//         taken_seats: 0,
+//         total_seats: 6,
+//         reserved: true,
+//         x: 49,
+//         y: 0,
+//     },
+// ];
+
+const response = await fetch("http://localhost:8080/location/" + location_id, {
+    method: "GET",
+    headers: {"Content-Type": "application/json"}
+})
+
+const location = await response.json();
+    console.log(location)
+
+const response2 = await fetch("http://localhost:8080/table/" + location_id, {
+method: "GET",
+headers: {"Content-Type": "application/json"}
+})
+
+const tables = await response2.json();
+    console.log(tables)
 
 const location_placeholders = structuredClone(location);
 ---
@@ -142,11 +158,12 @@ const location_placeholders = structuredClone(location);
                                 class="absolute circle no-margin table brown3 extra black-text"
                                 type="button"
                                 data-id={table.id}
+                                data-name={table.name}
                                 data-x={table.x}
                                 data-y={table.y}
                                 style={`transform:translate(${table.x}px, ${table.y}px);`}
                             >
-                                {table.id}
+                                {table.name}
                             </button>
                         ))
                     }
@@ -208,7 +225,7 @@ const location_placeholders = structuredClone(location);
     </main>
 </Layout>
 
-<script define:vars={{ location, tables }}>
+<script define:vars={{ location, tables, location_id }}>
     document.addEventListener("DOMContentLoaded", function () {
         var grid = document.querySelector(".grid");
 
@@ -247,9 +264,10 @@ const location_placeholders = structuredClone(location);
                 .on("tap", function (event) {
                     ui("#dialog");
                     const id = event.target.getAttribute("data-id");
+                    const name = event.target.getAttribute("data-name")
                     selected_table_id = id;
                     document.getElementById("form-table-id").innerHTML =
-                        `Table ${selected_table_id}`;
+                        `Table ${name}`;
                 });
         });
 
@@ -314,6 +332,7 @@ const location_placeholders = structuredClone(location);
             event.preventDefault();
 
             const formData = new FormData(event.target);
+            formData.append("uuid", location_id);
             const street_address = formData.get("street_address");
             const neighborhood = formData.get("neighborhood");
             const city = formData.get("city");
@@ -346,7 +365,17 @@ const location_placeholders = structuredClone(location);
                 return alert("No changes detected");
             }
 
-            console.log({ street_address, neighborhood, city });
+            console.log(JSON.stringify(formData));
+            var object = {};
+            formData.forEach((value, key) => object[key] = value);
+            var json = JSON.stringify(object);
+            console.log(json)
+            const response = await fetch("http://localhost:8080/customer/update", {
+                method: "POST",
+                headers: {"Content-Type": "application/json"},
+                body: json
+            })
+            console.log(response)
         });
 </script>
 
