--- a/src/pages/locations/[location_id].astro
+++ b/src/pages/locations/[location_id].astro
@@ -31,71 +31,25 @@ if (error) {
     return redirect("/login");
 }
 
-const email = data.user?.email;
+const location_response = await fetch(
+    "http://localhost:8080/location/" + location_id,
+    {
+        method: "GET",
+        headers: { "Content-Type": "application/json" },
+    },
+);
 
-// iz baze povuci detalje o specifičnom kafiću na temelju UUID iz linka
-// const location = {
-//     id: "u3z",
-//     neighborhood: "Vrbik",
-//     street_address: "Unska 3",
-//     city: "Zagreb",
-// };
-console.log(location_id)
+const location = await location_response.json();
 
-const response = await fetch("http://localhost:8080/location/" + location_id, {
-    method: "GET",
-    headers: {"Content-Type": "application/json"}
-})
+const tables_response = await fetch(
+    "http://localhost:8080/table/" + location_id,
+    {
+        method: "GET",
+        headers: { "Content-Type": "application/json" },
+    },
+);
 
-const location = await response.json();
-    console.log(location)
-
-const response2 = await fetch("http://localhost:8080/table/" + location_id, {
-method: "GET",
-headers: {"Content-Type": "application/json"}
-})
-
-const tables = await response2.json();
-    console.log(tables)
-
-// const tables = [
-//     {
-//         id: 1,
-//         location_uuid: "u3z",
-//         taken_seats: 2,
-//         total_seats: 4,
-//         reserved: "false",
-//         x: 150,
-//         y: 50,
-//     },
-//     {
-//         id: 2,
-//         taken_seats: 0,
-//         total_seats: 4,
-//         reserved: "false",
-//         x: 0,
-//         y: 200,
-//     },
-//     {
-//         id: 3,
-//         taken_seats: 5,
-//         total_seats: 6,
-//         reserved: "false",
-//         x: 270,
-//         y: 0,
-//     },
-//     {
-//         id: 4,
-//         taken_seats: 0,
-//         total_seats: 6,
-//         reserved: "true",
-//         x: 49,
-//         y: 0,
-//     },
-// ];
-
-
-
+const tables = await tables_response.json();
 ---
 
 <Layout title="CoffeePlace">
@@ -196,7 +150,7 @@ const tables = await response2.json();
                     if (taken_seats === 0 && reserved === "false") {
                         ui("#dialog");
                         const id = event.target.getAttribute("data-id");
-                        const name = event.target.getAttribute("data-name")
+                        const name = event.target.getAttribute("data-name");
                         selected_table_id = id;
                         document.getElementById("form-table-id").innerHTML =
                             `Table ${name}`;
@@ -208,7 +162,7 @@ const tables = await response2.json();
         document
             .getElementById("reservation-form")
             .addEventListener("submit", async (event) => {
-                event.preventDefault(); // Prevent the default form submission
+                event.preventDefault();
 
                 const formData = new FormData();
                 formData.append("email", email);
@@ -218,28 +172,20 @@ const tables = await response2.json();
                 const plainFormData = Object.fromEntries(formData.entries());
 
                 try {
-                    const response = await fetch("http://localhost:8080/table/reserved/" + selected_table_id + "/true", {
-                        method: "POST"
-                    });
-                    // const response = await fetch("", {
-                    //     method: "POST",
-                    //     headers: {
-                    //         "Content-Type": "application/json",
-                    //     },
-                    //     body: JSON.stringify(plainFormData),
-                    // });
+                    const response = await fetch(
+                        "http://localhost:8080/table/reserved/" +
+                            selected_table_id +
+                            "/true",
+                        {
+                            method: "POST",
+                        },
+                    );
 
                     if (response.status === 200) {
                         window.location.reload();
                     }
-
-                    
-
-                    // handle error ako ne uspije
-                    //
-                    //
                 } catch (error) {
-                    console.log(error)
+                    console.log(error);
                 }
             });
     </script>
